[package]
name = "azure-pipelines-analyser"
description = "Validation of Azure Pipelines YAML files"
categories = ["development-tools"]
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/azure-pipelines-analyser"
documentation = "https://docs.rs/azure-pipelines-analyser"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.75.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]
