[package]
name = "azure-pipelines-analyzer"
description = "Validation of Azure Pipelines YAML files"
categories = ["development-tools"]
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/azure-pipelines-analyzer"
documentation = "https://docs.rs/azure-pipelines-analyzer"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2021"
rust-version = "1.75.0"
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
    "!src/**/tests.rs",
]

[dependencies]
insta = { version = "1.34.0", features = ["serde", "yaml"] }
rowan = { version = "0.15.15", features = ["serde1"] }
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.30"
